d3dvideosink: Only pass a dest rectangle if set, otherwise pass NULL

Call with an uninitialized rectangle will cause errors.

https://bugzilla.gnome.org/show_bug.cgi?id=714998